--- a/kashiken.css
+++ b/kashiken.css
@@ -1,5 +1,5 @@
 .slide {
-    width: 1200;
+    width: 100%;
     height: 500px;
     margin: 0;
     padding: 0;
@@ -12,16 +12,11 @@
 
 .slide img {
     width: 100%;
-    height: 100%;
     margin-left: 0;
     margin-right: auto;
     top: 0;
     left: 50px;
     position: absolute;
-}
-
-.all-container {
-    line-height: 1.8em;
 }
 
 .top-topics {
@@ -33,9 +28,10 @@
 
 }
 
+
 .top-topics__container {
-    margin: 0;
-    padding: 0;
+    margin: 0 auto;
+    padding: 0 20px;
     max-width: 1200px;
 }
 
@@ -56,7 +52,6 @@
 }
 
 .top-topics__inner {
-    width: 100%;
     margin-top: 45px;
     padding: 0;
     text-align: center;
@@ -71,7 +66,6 @@
 .top-topcis__block {
     margin-bottom: 40px;    
     width: 50%;
-    display: flex;
 }
 
 .top-topcis__block div {
@@ -108,6 +102,7 @@
     margin-top: 0;
     margin-bottom: 0;
     font-size: 16px;
+    line-height: 1.8em;
 }
 
 .banner-link {
@@ -141,91 +136,11 @@
     border-right: 3px solid #C32033;
     content: "";
     transform: rotate(45deg)
-}
-
-.top-link {
-    display: -webkit-flex;
-    display: flex;
-    margin: 40px auto 145px;
-    padding: 0 20px;
-    max-width: 940px;
-}
-
-.top-link a {
-    display: inline-block;
-    margin: 0 10px;
-    width: 50%;
-    height: 100px;
-    -webkit-box-align: center;
-    align-items: center;
-    vertical-align: center;
-}
 
 
-/* 美羽 */
-.site-header-conts{
-    padding: 10px 0 0;
-    /* margin-right: 0; */
-    /* margin-left: auto; */
-}
-.topimage{ 
-    display:inline-block;
-    width: 158px;
-    height: 40px;
-    margin-left: 0;
-    margin-right: auto;
-    border: 0;
-    box-sizing: border-box;
-    /* margin-bottom: 10px; */
-    margin-top: 10px;
-    vertical-align: text-bottom;
 }
 
-.topmenu{
-    font-weight: bold;
-    display: inline-block;
-}
-
-.topmenu li {
-    display: inline-block;
-    padding: 0 20px;
-    
-}
-.topmenu li a{
-    display: block;
-    color: black;
-    text-decoration: none;
-}
-
-.snsimage{
-    display: inline-block;
-    margin-left: auto;
-    margin-right: 0;
-    border: 0;
-    vertical-align: text-bottom;
-    margin-right: 0;
-    box-sizing: border-box;
-}
-.snscontainer{
-    /* display: inline-block; */
-    /* margin-left: auto; */
-    /* margin-right: 0; */
-    position: absolute;
-    top: 50px;
-    right: 0;
-    display: table-cell;
-    vertical-align: top;
-    text-align: right;
-}
-.site-header-in{
-    margin: auto;
-    width: 100%;
-    border-bottom: 35px solid #BC1A29;
-    height: 115px;
-    box-sizing: border-box;
-    background-color: #fff;
-    
-}
+/* みれい */
 .wrap-footer{
     width: 100%;
     background-color: #EAE9E8;
@@ -266,56 +181,4 @@
 .copy-footer{
     text-align: center;
     font-size: 12px;
-}
-.top-link:first-of-type {
-    margin-right: 20px;
-}
-
-
-a:-webkit-any-link {
-    text-decoration: none;
-}
-
-
-
-.top-link__block--red {
-    background-color: #C32033;
-}
-
-.top-link__inner {
-    display: -webkit-box;
-    display: flex;
-    -webkit-box-align: center;
-    align-items: center;
-    vertical-align: center;
-}
-
-.top-link__img {
-    width: 34%;
-}
-
-.imgdefault {
-    width: 100px;
-    height: 50px;
-}
-
-.top-link__txt-s {
-    margin: 0;
-    padding-left: 30px;
-    color: white;
-    font-size: 20px;
-    text-decoration: none !important;
-
-}
-
-.top-link__block--brown {
-    background-color: #392B1F;
-}
-
-.top-link__txt {
-    margin: 0;
-    padding-left: 75px;
-    color: white;
-    font-size: 24px;
-    text-decoration: none !important;
 }
