--- a/kashiken.css
+++ b/kashiken.css
@@ -1,3 +1,69 @@
+/* 美羽 */
+.site-header-conts{
+    padding: 10px 0 0;
+    /* margin-right: 0; */
+    /* margin-left: auto; */
+}
+.topimage{ 
+    display:inline-block;
+    width: 158px;
+    height: 40px;
+    margin-left: 0;
+    margin-right: auto;
+    border: 0;
+    box-sizing: border-box;
+    /* margin-bottom: 10px; */
+    margin-top: 10px;
+    vertical-align: text-bottom;
+}
+
+.topmenu{
+    font-weight: bold;
+    display: inline-block;
+}
+
+.topmenu li {
+    display: inline-block;
+    padding: 0 20px;
+
+}
+.topmenu li a{
+    display: block;
+    color: black;
+    text-decoration: none;
+}
+
+.snsimage{
+    display: inline-block;
+    margin-left: auto;
+    margin-right: 0;
+    border: 0;
+    vertical-align: text-bottom;
+    margin-right: 0;
+    box-sizing: border-box;
+}
+.snscontainer{
+    /* display: inline-block; */
+    /* margin-left: auto; */
+    /* margin-right: 0; */
+    position: absolute;
+    top: 50px;
+    right: 0;
+    display: table-cell;
+    vertical-align: top;
+    text-align: right;
+}
+.site-header-in{
+    margin: auto;
+    width: 100%;
+    border-bottom: 35px solid #BC1A29;
+    height: 115px;
+    box-sizing: border-box;
+    background-color: #fff;
+
+}
+
+/* かしけん */
 .slide {
     width: 100%;
     height: 500px;
@@ -136,8 +202,64 @@
     border-right: 3px solid #C32033;
     content: "";
     transform: rotate(45deg)
+}
 
+.top-link {
+    display: -webkit-flex;
+    display: flex;
+    margin: 40px auto 145px;
+    padding: 0 20px;
+    max-width: 940px;
+}
 
+.top-link a {
+    display: inline-block;
+    margin: 0 10px;
+    width: 50%;
+    height: 100px;
+    -webkit-box-align: center;
+    align-items: center;
+    vertical-align: center;
+}
+.top-link:first-of-type {
+    margin-right: 20px;
+}
+a:-webkit-any-link {
+    text-decoration: none;
+}
+.top-link__block--red {
+    background-color: #C32033;
+}
+.top-link__inner {
+    display: -webkit-box;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    vertical-align: center;
+}
+.top-link__img {
+    width: 34%;
+}
+.imgdefault {
+    width: 100px;
+    height: 50px;
+}
+.top-link__txt-s {
+    margin: 0;
+    padding-left: 30px;
+    color: white;
+    font-size: 20px;
+    text-decoration: none !important;
+}
+.top-link__block--brown {
+    background-color: #392B1F;
+}
+.top-link__txt {
+    margin: 0;
+    padding-left: 75px;
+    color: white;
+    font-size: 24px;
+    text-decoration: none !important;
 }
 
 /* みれい */
