--- a/kashiken.css
+++ b/kashiken.css
@@ -267,12 +267,18 @@ a:-webkit-any-link {
     width: 100%;
     background-color: #EAE9E8;
 }
-.box{
+.list-footer{
+    text-align: center;
+    margin: 16px auto;
+}
+.section-footer{
+    text-align: left;
     /* 箱を作って横並べ */
     display: inline-block;
-    width: 300px;
+    vertical-align: top;
+    padding-top: 80px;
 }
-.notdot{
+.section-footer li{
     /* ・を非表示 */
     list-style-type: none;
 }
@@ -286,21 +292,34 @@ a:-webkit-any-link {
     text-decoration: none;
     font-size: 12px;
     color: black;
+    display: inline-block;
+}
+.hurantyaizu{
+    width: 150px;
+    text-align: left;
 }
 .logo-footer{
     text-align: center;
+    padding-left: 50px;
 }
 .policy-footer{
     text-align: center;
-    border-bottom: 1px solid rgba(56, 43, 32, 0.5);
-
+    padding-top: 40px;
+    padding-left: 100px;
+    border-bottom: 1px solid black;
+    /* border-bottom-width: 80%; */
+    margin: 0 320px;
 }
 .subpolicy-footer{
     display: inline-block;
     list-style-type: none;
     color: black;
+    padding-bottom: 10px;
 }
 .copy-footer{
     text-align: center;
     font-size: 12px;
+    padding-bottom: 50px;
+    padding-left: 50px;
 }
+/* 下に余白ができてしまうのは、全体に上下0をかければよい？ */
