--- a/kashiken.css
+++ b/kashiken.css
@@ -1,30 +1,32 @@
 /* 美羽 */
 .site-header-conts{
-    padding: 10px 0 0;
+    width: 100%;
+    padding: 1em 1em;
     /* margin-right: 0; */
     /* margin-left: auto; */
 }
 .topimage{ 
     display:inline-block;
-    width: 158px;
-    height: 40px;
-    margin-left: 0;
+    width: 15%;
+    height: 20%;
+    /* margin-left: 0; */
     margin-right: auto;
-    border: 0;
+    /* border: 0; */
     box-sizing: border-box;
     /* margin-bottom: 10px; */
-    margin-top: 10px;
+    margin-top: 1em;
     vertical-align: text-bottom;
 }
 
 .topmenu{
     font-weight: bold;
     display: inline-block;
+    
 }
 
-.topmenu li {
+.header-list{
     display: inline-block;
-    padding: 0 20px;
+    padding: 0 1.5em;
 
 }
 .topmenu li a{
@@ -41,32 +43,53 @@
     vertical-align: text-bottom;
     margin-right: 0;
     box-sizing: border-box;
+    list-style: none;
 }
 .snscontainer{
     /* display: inline-block; */
     /* margin-left: auto; */
     /* margin-right: 0; */
     position: absolute;
-    top: 50px;
+    top: 5%;
     right: 0;
-    display: table-cell;
+    /* display: table-cell; */
+    display: flex;
     vertical-align: top;
     text-align: right;
+    box-sizing: border-box;
+
 }
 .site-header-in{
+    display: block;
     margin: auto;
     width: 100%;
     border-bottom: 35px solid #BC1A29;
-    height: 115px;
+    height: 7em;
     box-sizing: border-box;
     background-color: #fff;
-
 }
+.submenu{
+     margin: 0 12em;
+     display: none;
+     pointer-events: none;
+}
+.submenu li{
+    display: inline-block;
+    height: 7em;
+    padding: 0 1em;
+    /* display: none; */
+   
+}
+.submenu li a{
+    color: white;
+    /* display: none; */
+}
+
 
 /* かしけん */
 .slide {
     width: 100%;
-    height: 500px;
+    height: 520px;
     margin: 0;
     padding: 0;
     text-align: center;
@@ -78,11 +101,13 @@
 
 .slide img {
     width: 100%;
+    box-sizing: border-box;
     margin-left: 0;
     margin-right: auto;
     top: 0;
-    left: 50px;
+    left: 0;
     position: absolute;
+
 }
 
 .top-topics {
