--- a/kashiken.css
+++ b/kashiken.css
@@ -289,19 +289,21 @@ a:-webkit-any-link {
 
 /* みれい */
 .wrap-footer{
-    width: 100%;
+    width: 105%;
     background-color: #EAE9E8;
 }
 .list-footer{
     text-align: center;
     margin: 16px auto;
+    padding-left: 75px;
+    padding-top: 100px;
 }
 .section-footer{
     text-align: left;
     /* 箱を作って横並べ */
     display: inline-block;
     vertical-align: top;
-    padding-top: 80px;
+    margin-right: 60px;
 }
 .section-footer li{
     /* ・を非表示 */
@@ -325,12 +327,12 @@ a:-webkit-any-link {
 }
 .logo-footer{
     text-align: center;
-    padding-left: 50px;
+    padding-top: 10px;
 }
 .policy-footer{
     text-align: center;
     padding-top: 40px;
-    padding-left: 100px;
+    padding-left: 50px;
     border-bottom: 1px solid black;
     /* border-bottom-width: 80%; */
     margin: 0 320px;
@@ -342,9 +344,11 @@ a:-webkit-any-link {
     padding-bottom: 10px;
 }
 .copy-footer{
+    padding-top: 10px;
+    padding-bottom: 50px;
+}
+.copy-footer-text{
     text-align: center;
     font-size: 12px;
-    padding-bottom: 50px;
-    padding-left: 50px;
 }
 /* 下に余白ができてしまうのは、全体に上下0をかければよい？ */
