--- a/kashiken.css
+++ b/kashiken.css
@@ -1,33 +1,36 @@
 /* 美羽 */
 .site-header-conts{
     width: 100%;
-    padding: 1em 1em;
+    padding: 1.2em 0;
     /* margin-right: 0; */
     /* margin-left: auto; */
 }
 .topimage{ 
     display:inline-block;
-    width: 15%;
-    height: 20%;
-    /* margin-left: 0; */
+    width: 20%;
+    height: 30%;
+    margin-left: 0;
     margin-right: auto;
-    /* border: 0; */
+    border: 0;
     box-sizing: border-box;
     /* margin-bottom: 10px; */
     margin-top: 1em;
     vertical-align: text-bottom;
+    list-style: none;
+    margin: 0 5em 0 0 ;
 }
 
 .topmenu{
     font-weight: bold;
+    font-size: 14px;
     display: inline-block;
+    /* text-align: center; */
     
 }
 
 .header-list{
     display: inline-block;
     padding: 0 1.5em;
-
 }
 .topmenu li a{
     display: block;
@@ -41,7 +44,6 @@
     margin-right: 0;
     border: 0;
     vertical-align: text-bottom;
-    margin-right: 0;
     box-sizing: border-box;
     list-style: none;
 }
