--- a/kashiken.css
+++ b/kashiken.css
@@ -32,6 +32,12 @@
     display: inline-block;
     padding: 0 1.5em;
 }
+
+.topmenu li {
+    display: inline-block;
+    margin: 0 10px;
+}
+
 .topmenu li a{
     display: block;
     color: black;
@@ -47,20 +53,21 @@
     box-sizing: border-box;
     list-style: none;
 }
-.snscontainer{
+    
+.snscontainer {
     /* display: inline-block; */
     /* margin-left: auto; */
     /* margin-right: 0; */
     position: absolute;
-    top: 5%;
+    top: 3%;
     right: 0;
     /* display: table-cell; */
     display: flex;
     vertical-align: top;
     text-align: right;
     box-sizing: border-box;
-
 }
+
 .site-header-in{
     display: block;
     margin: auto;
@@ -170,7 +177,6 @@
 
 .top-topcis__img img {
     max-width: 230px;
-   
 }
 
 .top-topcis__txt-area {
