--- a/kashiken.css
+++ b/kashiken.css
@@ -1,23 +1,25 @@
 /* 美羽 */
 .site-header-conts{
     width: 100%;
-    padding: 1.2em 0;
+    padding: 1em 1em;
     /* margin-right: 0; */
     /* margin-left: auto; */
 }
 .topimage{ 
     display:inline-block;
+    /* width: 15%; */
+    /* height: 20%; */
     width: 20%;
-    height: 30%;
-    margin-left: 0;
+    height: 30%; 
+    /* margin-left: 0; */
     margin-right: auto;
-    border: 0;
+    /* border: 0; */
     box-sizing: border-box;
     /* margin-bottom: 10px; */
     margin-top: 1em;
     vertical-align: text-bottom;
-    list-style: none;
-    margin: 0 5em 0 0 ;
+    /* list-style: none;
+    margin: 0 5em 0 0 ; */
 }
 
 .topmenu{
@@ -31,12 +33,9 @@
 .header-list{
     display: inline-block;
     padding: 0 1.5em;
-}
-
-.topmenu li {
-    display: inline-block;
     margin: 0 10px;
 }
+
 
 .topmenu li a{
     display: block;
