--- a/kashiken.css
+++ b/kashiken.css
@@ -1,46 +1,64 @@
 /* 美羽 */
 .site-header-conts{
-    width: 100%;
-    padding: 1em 1em;
+    /* width: 100%; */
+    padding: 0.5em 1em;
+    display: block; 
     /* margin-right: 0; */
     /* margin-left: auto; */
 }
 .topimage{ 
-    display:inline-block;
-    /* width: 15%; */
-    /* height: 20%; */
-    width: 20%;
-    height: 30%; 
+    display: inline-block;
+    width: 15%;
+    height: 20%;
+    /* width: 20%; */
+    /* height: 30%;  */
     /* margin-left: 0; */
-    margin-right: auto;
+    /* margin-right: 17%; */
     /* border: 0; */
     box-sizing: border-box;
     /* margin-bottom: 10px; */
     margin-top: 1em;
-    vertical-align: text-bottom;
+    vertical-align: bottom;
     /* list-style: none;
     margin: 0 5em 0 0 ; */
 }
 
 .topmenu{
+    display: inline-block;
     font-weight: bold;
     font-size: 14px;
-    display: inline-block;
+    /* display: flex; */
+    /* justify-content: center; */
+    top: 0.7em;
+    left: 10%; 
+    /* right: 1%; */
+    position: relative;
     /* text-align: center; */
     
 }
 
 .header-list{
-    display: inline-block;
-    padding: 0 1.5em;
-    margin: 0 10px;
+    display: block;
+    padding: 0 1em;
+    
+    padding-right: 10px;
+    /* height: 20.67px; */
+    float: left;
+   /* max-width: 90px; */
+   /* width: calc(100% - 50px); */
 }
+/* .menu-list{
+    margin: 0 0 0 5px;
+    display: inline-block;
+} */
 
 
 .topmenu li a{
     display: block;
     color: black;
-    text-decoration: none;
+    text-decoration: none; 
+    /* margin: auto; */
+    
 }
 
 .snsimage{
@@ -58,7 +76,7 @@
     /* margin-left: auto; */
     /* margin-right: 0; */
     position: absolute;
-    top: 3%;
+    top: 1.5em;
     right: 0;
     /* display: table-cell; */
     display: flex;
@@ -76,21 +94,153 @@
     box-sizing: border-box;
     background-color: #fff;
 }
+.sub-menu{
+    display: block;
+    /* position: absolute; */
+    /* height: 3em; */
+
+}
 .submenu{
-     margin: 0 12em;
+     /* margin: 0 13em; */
      display: none;
+     box-sizing: border-box;
      pointer-events: none;
+     position: absolute;
+     top: 5em;
+     left: 17em;
+
 }
 .submenu li{
     display: inline-block;
-    height: 7em;
-    padding: 0 1em;
-    /* display: none; */
+    padding: 0 1em; 
    
 }
 .submenu li a{
     color: white;
-    /* display: none; */
+    font-size: 14px;
+   
+}
+.menu-btn{
+    display: none;
+}
+
+@media screen and (max-width:736px){
+    * {
+        float: none;
+        position: static;
+       
+    }
+    /* .body{
+         background-color: white;
+    } */
+     
+    .topimage {
+        /* max-width: 100%; */
+        /* height: auto; */
+        /* max-height: 50%; */
+        width: 158px ;
+        max-height: 37px;
+        height: 100%;
+        position: relative;
+        /* position: fixed; */
+        z-index: 100000;
+        left: 60px;
+        display: inline-block;
+    }
+    .snsimage{
+        /* position: fixed; */
+        top: -0.5em;
+        position: relative;
+        /* position: fixed; */
+        z-index: 100000;
+    }
+    .site-header-conts{
+        /* width: 100%; */
+        padding: 0;
+        margin: auto;
+        /* background-color: white; */
+        
+    }
+    .site-header-in{
+        position: fixed;
+        z-index: 100000;
+        border-bottom: none;
+        /* margin: 0; */
+        height: 4em;
+    }
+    .topmenu{
+        display: flex;
+        flex-direction: column;
+        background-color: white;
+        width: 100%;
+        height: 100vh;
+        position: absolute;
+        top: -1000%;
+        left: 0;
+        transition: .3s;
+    }
+   
+    .header-list{ 
+        /* display: flex; */
+        margin: 15px;
+        justify-content: center;
+        align-items: center;
+
+        display: block;
+        top: 50px;
+        position: relative;
+        
+    }
+    .topmenu.open{
+        position: absolute;
+        top: 0;
+    }
+    .btn-line{
+        width: 100%;
+        height: 4px;
+      /* バーガー線の色 */
+        background-color: white;
+      /* バーガー線の位置基準として設定 */
+        position: relative;
+        
+    }
+
+    .menu-btn {
+        position: fixed;
+        top: 0;
+        /* right: 10px; */
+        left: 0;
+        height: 48px;
+        width: 48px;
+         /* バーガーの線をボタン範囲の中心に配置 */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 100000;
+        background-color:white;
+        border: none;
+    }
+
+
+
+    .menu-btn span,
+    .menu-btn span:before,
+    .menu-btn span:after {
+        content: '';
+        display: flex;
+        height: 3px;
+        width: 25px;
+        border-radius: 3px;
+        background-color: #BC1A29;
+        position: absolute;
+    }
+    .menu-btn span:before {
+        bottom: 8px;
+    }
+    .menu-btn span:after {
+        top: 8px;
+    }
+
 }
 
 
