--- a/kashiken.css
+++ b/kashiken.css
@@ -9,16 +9,17 @@
 .topimage{ 
     display: inline-block;
     width: 15%;
-    height: 20%;
+    height: 20px;
     /* width: 20%; */
     /* height: 30%;  */
     /* margin-left: 0; */
     /* margin-right: 17%; */
     /* border: 0; */
     box-sizing: border-box;
-    /* margin-bottom: 10px; */
-    margin-top: 1em;
-    vertical-align: bottom;
+    /* margin-top: 20px; */
+    /* padding-top: 1em; */
+    vertical-align: middle;
+
     /* list-style: none;
     margin: 0 5em 0 0 ; */
 }
@@ -76,8 +77,8 @@
     /* margin-left: auto; */
     /* margin-right: 0; */
     position: absolute;
-    top: 1.5em;
-    right: 0;
+    top: 1.7em;
+    right: 40px;
     /* display: table-cell; */
     display: flex;
     vertical-align: top;
@@ -145,6 +146,7 @@
         /* position: fixed; */
         z-index: 100000;
         left: 60px;
+        top: 1.0em;
         display: inline-block;
     }
     .snsimage{
@@ -155,13 +157,17 @@
         z-index: 100000;
     }
     .site-header-conts{
-        /* width: 100%; */
-        padding: 0;
-        margin: auto;
+        width: 100%;
+        /* padding-top: 10px; */
+        /* margin-top:20px; */
+        /* margin: auto; */
+        height: 100%;
         /* background-color: white; */
         
     }
     .site-header-in{
+        /* margin-top: 10px; */
+        padding: 0;
         position: fixed;
         z-index: 100000;
         border-bottom: none;
@@ -175,7 +181,7 @@
         width: 100%;
         height: 100vh;
         position: absolute;
-        top: -1000%;
+        top: -5000%;
         left: 0;
         transition: .3s;
     }
@@ -210,8 +216,9 @@
         top: 0;
         /* right: 10px; */
         left: 0;
-        height: 48px;
-        width: 48px;
+        height: 40px;
+        margin-top: 14px;
+        width: 40px;
          /* バーガーの線をボタン範囲の中心に配置 */
         display: flex;
         justify-content: center;
@@ -239,6 +246,9 @@
     }
     .menu-btn span:after {
         top: 8px;
+    }
+    .slide{
+        top: 60px;
     }
 
 }
