--- a/kashiken.css
+++ b/kashiken.css
@@ -10,8 +10,6 @@
     display: inline-block;
     width: 15%;
     height: 20px;
-    /* width: 20%; */
-    /* height: 30%;  */
     /* margin-left: 0; */
     /* margin-right: 17%; */
     /* border: 0; */
@@ -30,7 +28,7 @@
     font-size: 14px;
     /* display: flex; */
     /* justify-content: center; */
-    top: 0.7em;
+    top: 1.5em;
     left: 10%; 
     /* right: 1%; */
     position: relative;
@@ -78,7 +76,7 @@
     /* margin-right: 0; */
     position: absolute;
     top: 1.7em;
-    right: 40px;
+    right: 0;
     /* display: table-cell; */
     display: flex;
     vertical-align: top;
@@ -148,6 +146,9 @@
         left: 60px;
         top: 1.0em;
         display: inline-block;
+    }
+    .snscontainer{
+        right: 40px;
     }
     .snsimage{
         /* position: fixed; */
